tests/golden/vshn-managed/appcat/appcat/12_stackgres_openshift_operator_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-stackgres-api
  name: allow-stackgres-api
  namespace: syn-stackgres-operator
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              appcat.vshn.io/servicename: postgresql-standalone
        - namespaceSelector:
            matchLabels:
              name: syn-crossplane
  podSelector:
    matchLabels:
      app: StackGresConfig
  policyTypes:
    - Ingress
